Fix scrollbar and color classes.

--- a/src/darkslide/themes/default/css/screen.css
+++ b/src/darkslide/themes/default/css/screen.css
@@ -510,14 +510,14 @@ html * {
     rendering-intent: auto;
 }
 */
-.yellow { #b58900; }
-.orange { #cb4b16; }
-.red { #dc322f; }
-.magenta { #d33682; }
-.violet { #6c71c4; }
-.blue { #268bd2; }
-.cyan { #2aa198; }
-.green { #859900; }
+.yellow { color: #b58900; }
+.orange { color: #cb4b16; }
+.red { color: #dc322f; }
+.magenta { color: #d33682; }
+.violet { color: #6c71c4; }
+.blue { color: #268bd2; }
+.cyan { color: #2aa198; }
+.green { color: #859900; }
 
 body {
   background-color: #073642;
@@ -555,9 +555,14 @@ body.expose .slide.current {
 body.expose .slide.current:hover {
   box-shadow: 0 0 0 15px #268bd2, 0 0 0 30px #b58900;
 }
-
 .presenter_notes {
   background: #002b36;
+}
+::-webkit-scrollbar-thumb {
+  background: #eee8d5;
+}
+::-webkit-scrollbar-corner {
+  background: #fdf6e3;
 }
 
 div.slides, body.expose div.slides.nocontext,
